<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">asteroides</string>
    <string name="action_settings">Settings</string>
    <string name="tituloAplicacion">Asteroides</string>
	<string name="Arrancar">Jugar</string>
	<string name="Configurar">Configurar</string>
	<string name="Acercade">Acerca de</string>
	<string name="Salir">Puntuaciones</string>
	<string name="acercadeText">Este programa ha sido desarrollado como ejemplo en el curso de
	     Android para demostrar como se pueden lanzar nuevas 
	     actividades desde la actividad principal</string>
	
</resources>
