<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".Localizacion" >

    <TextView
        style="@style/TextoAsteroides"
        android:text="@string/tituloAplicacion" />

    <Button 
        android:id="@+id/Button1"
		style="@style/TextoAsteroides.Botones"
    	android:text="@string/Arrancar" />
    
    
    <Button 
        android:id="@+id/Button2"
		style="@style/TextoAsteroides.Botones"
    	android:text="@string/Configurar"
    	android:onClick="lanzarPreferencias" />
    
    
    <Button 
        android:id="@+id/Button3"
		style="@style/TextoAsteroides.Botones"
		android:text="@string/Acercade" />
    
    
    <Button 
        android:id="@+id/Button4"
		style="@style/TextoAsteroides.Botones"
    	android:text="@string/Salir" />

</LinearLayout>

